--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
       <span class="loader"></span>
 
       <ul class="gallery"></ul>
+
+      <button class="load-more-button is-hidden" type="button">
+        Load more
+      </button>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
